--- a/app/TimerGUI.fxml
+++ b/app/TimerGUI.fxml
@@ -6,22 +6,20 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="339.0" prefWidth="494.0" style="-fx-background-color: #bbbbbb;" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="app.TimerController">
+<AnchorPane prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: #bbbbbb;" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.TimerController">
    <children>
-      <ListView fx:id="listView" layoutX="103.0" layoutY="107.0" prefHeight="159.0" prefWidth="286.0" />
-      <Pane layoutX="179.0" layoutY="53.0" prefHeight="40.0" prefWidth="135.0">
-         <children>
-            <Label fx:id="timeLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="135.0" text="Time" textAlignment="CENTER">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-      <Pane layoutX="41.0" layoutY="14.0" prefHeight="40.0" prefWidth="410.0">
-         <children>
-            <Label fx:id="scramble" alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="410.0" text="Scramble" textAlignment="CENTER" />
-         </children>
-      </Pane>
+      <ListView fx:id="listView" layoutX="337.0" layoutY="327.0" prefHeight="159.0" prefWidth="286.0" />
+      <Pane layoutX="179.0" layoutY="53.0" prefHeight="40.0" prefWidth="135.0" />
+      <Pane layoutX="41.0" layoutY="14.0" prefHeight="40.0" prefWidth="410.0" />
+      <Label fx:id="timeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="119.0" prefHeight="150.0" prefWidth="424.0" text="0.00" textAlignment="CENTER">
+         <font>
+            <Font size="77.0" />
+         </font>
+      </Label>
+      <Label fx:id="scramble" alignment="CENTER" contentDisplay="CENTER" layoutX="25.0" layoutY="59.0" prefHeight="68.0" prefWidth="910.0" text="B' U2 F2 R L' D B' U2 F2 R L' D B' U2 F2 R L' D B' U2 F2 R L' D B' U2 F2 R L' D " textAlignment="CENTER">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
