--- a/app/TimerGUI.fxml
+++ b/app/TimerGUI.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: #bbbbbb;" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.TimerController">
+<AnchorPane prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: #bbbbbb;" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.TimerController">
    <children>
       <ListView fx:id="listView" layoutX="337.0" layoutY="327.0" prefHeight="159.0" prefWidth="286.0" />
       <Pane layoutX="179.0" layoutY="53.0" prefHeight="40.0" prefWidth="135.0" />
-      <Pane layoutX="41.0" layoutY="14.0" prefHeight="40.0" prefWidth="410.0" />
       <Label fx:id="timeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="119.0" prefHeight="150.0" prefWidth="424.0" text="0.00" textAlignment="CENTER">
          <font>
             <Font size="77.0" />
@@ -21,5 +21,6 @@
             <Font size="16.0" />
          </font>
       </Label>
+      <Button fx:id="save" layoutX="460.0" layoutY="500.0" mnemonicParsing="false" onAction="#save" text="Save" />
    </children>
 </AnchorPane>
